[Sidebar Spacing] Fix Sidebar width in 'px' unit. It prevent sidebar content width to be squeezed by showing scroll bar.
[SCSS Variables] Add my custom defined variables.

--- a/_sass/custom/_myarchive.scss
+++ b/_sass/custom/_myarchive.scss
@@ -1,5 +1,5 @@
 .archive {
     @include breakpoint($large) {
-        width: 80%;
+        width: calc(100% - #{$mysidebar-width} - 1em); // -1em from _mixins for padding of <div id='main'>.
     }
 }
