--- a/_sass/custom/_mymasthead.scss
+++ b/_sass/custom/_mymasthead.scss
@@ -11,8 +11,6 @@
     }
 }
 
-$mymasthead-text-color: white;  // text color is white, basically.
-
 // responsive menu style
 .greedy-nav {
     a {
