--- a/_sass/custom/_mysidebar.scss
+++ b/_sass/custom/_mysidebar.scss
@@ -14,61 +14,67 @@
 	}
 
     @include breakpoint($large) {
-        width: calc(20% - 1em);
-        margin-right: 0.5em;
-        padding-right: 0.5em;
+        width: $mysidebar-width;
+        padding-right: 8px;
+        margin-right: 8px;
     }
 
-    .nav__list .nav__items li {
-        overflow-x: hidden;
-        .nav__sub-title {
-            padding-bottom: 0;
+    .nav__list {
+        width: $mysidebar-width - $mysidebar-scroll-width;
+        & .nav__items li {
+            .nav__sub-title {
+                padding-bottom: 0;
+                margin-bottom: 0;
+                cursor: pointer;
+
+                .nav__sub-title-set {
+                    display: table;
+                    width: 100%;
+                    span {
+                        display: table-cell;
+                        vertical-align: middle;
+                        overflow-x: hidden;
+                    }
+                    .nav__sub-title-dropdownicon {
+                        text-align: right;
+                    }
+                }
+            }
+
+            & ul.nav__item-children {
+                text-align: right;
+                display: none;
+                &.show {
+                    display: block;
+                }
+            }
+        }
+    }
+}
+
+.author__profile-set {
+    width: $mysidebar-width - $mysidebar-scroll-width;
+    .author__bio {
+        font-size: medium;
+    }
+
+    .author__urls {
+        &.social-icons li span {
+            font-size: small;
+        }
+
+        a {
+            padding: 0;
+        }
+    }
+
+    .social-icons {
+        li {
+            display: inline-block;
+        }
+        li[itemprop="homeLocation"] {
+            display: list-item;
             margin-bottom: 0;
-            cursor: pointer;
-
-            .nav__sub-title-set {
-                display: table;
-                width: 100%;
-                span {
-                    display: table-cell;
-                    vertical-align: middle;
-                }
-                .nav__sub-title-dropdownicon {
-                    text-align: right;
-                }
-            }
         }
-
-        & ul.nav__item-children {
-            text-align: right;
-            display: none;
-            &.show {
-                display: block;
-            }
-        }
-    }
-}
-
-.author__bio {
-    font-size: medium;
-}
-
-.author__urls {
-    &.social-icons li span {
-        font-size: small;
-    }
-
-    a {
-        padding: 0;
-    }
-}
-
-.social-icons {
-    li {
-        display: inline-block;
-    }
-    li[itemprop="homeLocation"] {
-        display: list-item;
-        margin-bottom: 0;
     }
 }
